fix up merge + align text to left cuz javier keeps crying

--- a/static/style.css
+++ b/static/style.css
@@ -13,7 +13,6 @@ body {
   display: grid;
   place-items: center;
   align-content: center;
-  text-align: center;
 }
 
 #main {
